--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,13 @@
 body {
     text-align: center;
+    font-family: "Montserrat", sans-serif;
+}
+
+
+div {
+  font-size: 34px;
+  text-transform: uppercase;
+  letter-spacing: 6px;
+  line-height: 1.2;
+  font-weight: 400;
 }
